# HarmonyChat

./: .env.api  .env.consumer  .gitignore  .sops.yaml  README.md  Taskfile.yaml  compose.yaml  devbox.json  docker-compose.override.yaml  docker-compose.yaml  environment.yaml  main.py  pyproject.toml
backend/: .dockerignore  .env.api.example  .env.consumer.example  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/specs/: extract_openapi.py
backend/src/harmony/api/: exception_handlers.py  lifespan.py  main.py
backend/src/harmony/api/v1/: chat.py  dependencies.py  router.py  user.py
backend/src/harmony/app/: main.py
backend/src/harmony/app/core/: __init__.py  exceptions.py  interfaces.py  lifespan.py  logging.py  security.py  settings.py
backend/src/harmony/app/db/: __init__.py  dynamodb.py  postgres.py  unit_of_work.py  utils.py  writers.py
backend/src/harmony/app/init/: __init__.py  cache.py  dynamodb.py  kafka.py  postgres.py
backend/src/harmony/app/models/: __init__.py  base.py  chat.py  outbox.py  refresh_token.py  user.py  user_chat.py
backend/src/harmony/app/repositories/: __init__.py  auth.py  chat_data.py  chat_history.py  user_chat.py  user_chat_data.py  user_data.py
backend/src/harmony/app/schemas/: __init__.py  auth.py  centrifugo.py  chat.py  message.py  metadata.py  user.py
backend/src/harmony/app/services/: __init__.py  auth.py  cache.py  chat.py  command.py  pubsub.py  stream.py  user.py  (+1 more)
backend/src/harmony/consumer/: consumer.py  context.py  handlers.py  lifespan.py  main.py  router.py
(+410 files in other folders)
