[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmony-chat-api"
version = "0.1.0"
description = "Implementation of harmony-chat backend"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "scalar-fastapi>=1.6.2",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.12.0",
    "typing-inspection>=0.4.2",
    "annotated-doc>=0.0.4",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "aioboto3>=15.5.0",
    "aiofiles>=25.1.0",
    "redis>=7.2.0",
    "aiokafka[snappy]>=0.13.0",
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.31.0",
    "python-ulid>=3.1.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "faker>=40.11.1",
    "pytest-asyncio>=1.3.0",
    "rich>=14.3.3",
    "aiolimiter>=1.2.1",
    "pytest-xdist>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/harmony"]
